<resources>
	<string name="application_name">Shelves</string>
	<string name="version">Version</string>
	<string name="ad_id" translatable="false">a14d7974ddb4707</string>
	<string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
	<string name="tab_item_selection">Collection</string>
	<string name="tab_loaned_items">Loaned Items</string>
	<string name="tab_wishlist">Wishlist</string>
	<string name="main_grid_item_views">Hide/Show Collections</string>
	<string name="main_grid_item_dialog_title">Select Collections To Hide</string>
	<string name="main_grid_item_dialog_change">Change Visibility</string>
	<string name="main_grid_insult">You\'ve done something awful. How are you supposed
		to use Shelves now?
	</string>
	<string name="main_grid_ok_button">Uhh&#8230;</string>
	<string name="apparel_label">apparel</string>
	<string name="apparel_label_big">Apparel</string>
	<string name="boardgame_label">board game</string>
	<string name="boardgame_label_plural_small">board games</string>
	<string name="boardgame_label_single_big">Board Game</string>
	<string name="boardgame_label_plural_big">Board Games</string>
	<string name="book_label">book</string>
	<string name="book_label_plural_small">books</string>
	<string name="book_label_single_big">Book</string>
	<string name="book_label_plural_big">Books</string>
	<string name="comic_label">comic</string>
	<string name="comic_label_plural_small">comics</string>
	<string name="comic_label_single_big">Comic</string>
	<string name="comic_label_plural_big">Comics</string>
	<string name="gadget_label">gadget</string>
	<string name="gadget_label_plural_small">gadgets</string>
	<string name="gadget_label_single_big">Gadget</string>
	<string name="gadget_label_plural_big">Gadgets</string>
	<string name="movie_label">movie</string>
	<string name="movie_label_plural_small">movies</string>
	<string name="movie_label_single_big">Movie</string>
	<string name="movie_label_plural_big">Movies</string>
	<string name="music_label">music</string>
	<string name="music_label_plural_small">albums</string>
	<string name="music_label_single_big">Album</string>
	<string name="music_label_big">Music</string>
	<string name="software_label">software</string>
	<string name="software_label_plural_small">software</string>
	<string name="software_label_big">Software</string>
	<string name="tool_label">tool</string>
	<string name="tool_label_plural_small">tools</string>
	<string name="tool_label_single_big">Tool</string>
	<string name="tool_label_plural_big">Tools</string>
	<string name="toy_label">toy</string>
	<string name="toy_label_plural_small">toys</string>
	<string name="toy_label_single_big">Toy</string>
	<string name="toy_label_plural_big">Toys</string>
	<string name="videogame_label">video game</string>
	<string name="videogame_label_plural_small">video games</string>
	<string name="videogame_label_single_big">Video Game</string>
	<string name="videogame_label_plural_big">Video Games</string>
	<string name="error_no_items">No items in this collection to display!</string>
	<string name="error_zxing_missing_title">Missing Barcode Scanner</string>
	<string name="error_zxing_missing_message">You must first install the free ZXing Barcode
		Scanner
		application. You will be directed to the download page.
	</string>
	<string name="zxing_go_get">I\'ll go get it!</string>
	<string name="error_import_in_progress">You\'re already importing</string>
	<string name="error_export_in_progress">You\'re already exporting</string>
	<string name="error_search_in_progress">You\'re already searching</string>
	<string name="error_missing_import_file">Couldn\'t find the import file</string>
	<string name="error_import_asynch">Error reading import file. Please try again.
	</string>
	<string name="error_missing_export_file">Couldn\'t create export file</string>
	<string name="error_adding_item">Couldn\'t add %s. You might already have it.
	</string>
	<string name="error_item_exists">You\'ve already got that!</string>
	<string name="error_with_server">Error with license check! Make sure you have an
		Internet connection, or try again later.
	</string>
	<string name="error_no_barcode">Missing barcode</string>
	<string name="import_results">Results of Import</string>
	<string name="import_result_description">Some items were not added, since their barcode
		information wasn\'t available online. Try adding these missing items
		manually.\nThese results are stored in a file called %s, in
		the
		&#8220;shelves&#8221; folder on your SD card.
	</string>
	<string name="import_missing_items_singular">%s item couldn\'t be added:\n</string>
	<string name="import_missing_items_plural">%s items couldn\'t be added:\n</string>
	<string name="import_missing_items_limit">%s items couldn\'t be added (25 shown here):\n
	</string>
	<string name="import_existing_items_singular">%s item already existed:\n</string>
	<string name="import_existing_items_plural">%s items already existed:\n</string>
	<string name="import_existing_items_limit">%s items already existed (25 shown here):\n
	</string>
	<string name="success_imported_item">Successfully imported %1$d %2$s</string>
	<string name="success_exported">Successfully exported your collection</string>
	<string name="success_added">Successfully added %s</string>
	<string name="success_item_not_found">You don\'t have this %s</string>
	<string name="success_item_deleted">%s deleted</string>
	<string name="success_refreshing_cover">Refreshing cover&#8230;</string>
	<string name="success_item_found">Found %1$d %2$s</string>
	<string name="take_new_photo">Take New Photo</string>
	<string name="menu_item_add_from_internet_label">Add from online source</string>
	<string name="menu_item_add_manually_label">Add new blank item</string>
	<string name="menu_item_scan_label">Scan</string>
	<string name="menu_item_add_label">Scan to add</string>
	<string name="menu_item_add_bulk_label">Scan to add (Bulk Mode)</string>
	<string name="menu_item_check_label">Scan to find in Shelves</string>
	<string name="menu_item_check_online_label">Scan to find online</string>
	<string name="menu_item_search_label">Search</string>
	<string name="menu_item_sort_label">Sort</string>
	<string name="menu_item_multiselect_label">Multi-Select</string>
	<string name="menu_item_filter_label">Filter</string>
	<string name="menu_item_settings_label">Settings</string>
	<string name="menu_item_help_label">Help</string>
	<string name="menu_item_view">View/Buy Online</string>
	<string name="menu_item_view_short">View/Buy%s</string>
	<string name="menu_item_change_style">Change Shelf Style</string>
	<string name="menu_item_change_shelf">View with Shelf Background</string>
	<string name="menu_item_change_list">View as List</string>
	<string name="menu_item_change_list_nocover">View as List (no covers)</string>
	<string name="context_menu_item_quantity_label">Change Quantity</string>
	<string name="context_menu_item_wishlist_label">Add to Wishlist</string>
	<string name="context_menu_item_tag_label">Tags</string>
	<string name="context_menu_item_rate_label">Rate</string>
	<string name="context_menu_item_change_cover_label">Replace Cover</string>
	<string name="context_menu_item_loan_label">Mark as Loaned</string>
	<string name="context_menu_item_loan_return_label">Mark as Returned</string>
	<string name="context_menu_item_loan_change_label">Change Loan Information</string>
	<string name="context_menu_item_delete_label">Delete</string>
	<string name="adding_label">Adding&#8230;</string>
	<string name="import_label">Importing&#8230;</string>
	<string name="export_label">Exporting&#8230;</string>
	<string name="add_label">Add</string>
	<string name="save_label">Save</string>
	<string name="cancel_label">Cancel</string>
	<string name="okay_label">Okay</string>
	<string name="progress_dialog_wait">Please wait&#8230;</string>
	<string name="search_add_hint_apparel">Title, designer, or keywords</string>
	<string name="search_add_hint_boardgame">Title</string>
	<string name="search_add_hint_book">Title, author, or keywords</string>
	<string name="search_add_hint_comic">Title, author, or keywords</string>
	<string name="search_add_hint_gadget">Title, manufacturer, or keywords</string>
	<string name="search_add_hint_movie">Title, director, or keywords</string>
	<string name="search_add_hint_music">Title, band, or keywords</string>
	<string name="search_add_hint_tool">Title, manufacturer, or keywords</string>
	<string name="search_add_hint_toy">Title, manufacturer, or keywords</string>
	<string name="search_add_hint_software">Title, company, or keywords</string>
	<string name="search_add_hint_videogame">Title, company, or keywords</string>
	<string name="search_progress">Searching&#8230;</string>
	<string name="label_pages">%s pages</string>
	<string name="label_minutes">%s minutes</string>
	<string name="dialog_add_message">Add this to your collection?</string>
	<string name="dialog_add_cancel">Don\'t add</string>
	<string name="context_menu_add_details">View Details</string>
	<string name="live_folder_apparel">Apparel (Shelves)</string>
	<string name="live_folder_boardgames">Board Games (Shelves)</string>
	<string name="live_folder_books">Books (Shelves)</string>
	<string name="live_folder_comics">Comics (Shelves)</string>
	<string name="live_folder_gadgets">Gadgets (Shelves)</string>
	<string name="live_folder_movies">Movies (Shelves)</string>
	<string name="live_folder_music">Music (Shelves)</string>
	<string name="live_folder_software">Software (Shelves)</string>
	<string name="live_folder_tools">Tools (Shelves)</string>
	<string name="live_folder_toys">Toys (Shelves)</string>
	<string name="live_folder_videogames">Video Games (Shelves)</string>
	<string name="item_details_tags">Tags</string>
	<string name="item_details_artists">Artists</string>
	<string name="item_details_characters">Characters</string>
	<string name="item_details_issue">Issue</string>
	<string name="item_details_format">Format</string>
	<string name="item_details_actors">Actors</string>
	<string name="item_details_category">Category</string>
	<string name="item_details_edition">Edition</string>
	<string name="item_details_department">Department</string>
	<string name="item_details_fabric">Fabric</string>
	<string name="item_details_genre">Genre</string>
	<string name="item_details_platform">Platform</string>
	<string name="item_details_audience">Audience</string>
	<string name="item_details_features">Features</string>
	<string name="item_details_theatrical_debut">Theatrical Debut</string>
	<string name="item_details_languages">Languages</string>
	<string name="item_details_tracks">Tracks</string>
	<string name="item_details_label">Label</string>
	<string name="item_details_ean">EAN</string>
	<string name="item_details_upc">UPC</string>
	<string name="item_details_isbn">ISBN</string>
	<string name="item_details_dewey">Dewey</string>
	<string name="item_details_min_players">Minimum Players</string>
	<string name="item_details_max_players">Maximum Players</string>
	<string name="item_details_age">Minimum Age</string>
	<string name="item_details_playing_time">Playing Time (in minutes)</string>
	<string name="edit_title_label">Title</string>
	<string name="edit_cover_label">Cover</string>
	<string name="edit_cover_remove_label">Remove Cover?</string>
	<string name="edit_manufacturer_label">Manufacturer</string>
	<string name="edit_description_label">Description</string>
	<string name="edit_notes_label">Notes</string>
	<string name="edit_release_date_label">Release Date</string>
	<string name="edit_price_label">Price</string>
	<string name="month_prompt">Choose a month</string>
	<string name="quantity_label">Quantity</string>
	<string name="loan_item_to_button">Select Contact</string>
	<string name="loan_item_until">Loan Until</string>
	<string name="loan_item_add_to_cal">Add to calendar?</string>
	<string name="loan_item_button">Loan</string>
</resources>