<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2008 Romain Guy Copyright (C) 2010 Garen J. Torikian Licensed 
	under the Apache License, Version 2.0 (the "License"); you may not use this 
	file except in compliance with the License. You may obtain a copy of the 
	License at http://www.apache.org/licenses/LICENSE-2.0 Unless required by 
	applicable law or agreed to in writing, software distributed under the License 
	is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY 
	KIND, either express or implied. See the License for the specific language 
	governing permissions and limitations under the License. -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:icon="@android:drawable/ic_menu_sort_by_size"
		android:id="@+id/menu_item_sort" android:title="@string/menu_item_sort_label" />
	
	<item android:icon="@android:drawable/ic_menu_slideshow"
		android:id="@+id/menu_item_multiselect" android:title="@string/menu_item_multiselect_label"/>
		
	<item android:icon="@android:drawable/ic_menu_view" android:id="@+id/menu_change_style"
		android:title="@string/menu_item_change_style">
		<menu>
			<group android:id="@+id/view_group" android:visible="true">
				<item android:id="@+id/menu_item_view_shelf" android:title="@string/menu_item_change_shelf" />
				<item android:id="@+id/menu_item_view_list" android:title="@string/menu_item_change_list" />
				<item android:id="@+id/menu_item_view_list_nocover"
					android:title="@string/menu_item_change_list_nocover" />
			</group>
		</menu>
	</item>
	
<item android:icon="@android:drawable/ic_menu_preferences"
		android:id="@+id/menu_item_settings" android:title="@string/menu_item_settings_label"/>
		
	<item android:icon="@android:drawable/ic_menu_help" android:id="@+id/menu_item_help"
		android:title="@string/menu_item_help_label"/>
</menu>
