<?xml version="1.0" encoding="utf-8"?>
	<!--
		Copyright (C) 2010 Garen J. Torikian Licensed under the Apache
		License, Version 2.0 (the "License"); you may not use this file except
		in compliance with the License. You may obtain a copy of the License
		at http://www.apache.org/licenses/LICENSE-2.0 Unless required by
		applicable law or agreed to in writing, software distributed under the
		License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
		CONDITIONS OF ANY KIND, either express or implied. See the License for
		the specific language governing permissions and limitations under the
		License.
	-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:padding="10dip"
		android:orientation="vertical">

		<Button android:id="@+id/loan_item_to_button"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:text="@string/loan_item_to_button" />

		<TextView android:text="@string/loan_item_until"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:paddingTop="10dip" style="@style/DetailsLabel.Small" android:textColor="#FFF"/>

		<LinearLayout android:orientation="horizontal"
			android:paddingRight="10dip" android:layout_width="fill_parent"
			android:layout_height="wrap_content">

			<Button android:id="@+id/loan_date" android:layout_weight="0.7"
				android:layout_width="wrap_content" android:layout_height="wrap_content" />

			<Button android:id="@+id/loan_time" android:layout_weight="1"
				android:layout_marginRight="10dip" android:layout_width="wrap_content"
				android:layout_height="wrap_content" />

		</LinearLayout>

		<CheckBox android:text="@string/loan_item_add_to_cal"
			android:id="@+id/loan_item_add_to_cal" android:layout_width="fill_parent"
			android:layout_height="wrap_content" />

			<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:orientation="horizontal" android:paddingTop="10dip">
		<Button android:id="@+id/loan_item_cancel"
			android:layout_weight="1" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/cancel_label" />
		<Button android:text="@string/loan_item_button"
			android:id="@+id/loan_item_button" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_weight="1" />
	</LinearLayout>
	</LinearLayout>
</ScrollView>
